# ratatui-style

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.en.md  README.md  design.md  justfile
benches/: cascade.rs
crates/presets/: Cargo.toml  README.md
crates/presets/css/: catppuccin.css  default.css  dracula.css  nord.css  tailwind.css  widgets.css
crates/presets/examples/: 00_hello_world.rs  01_widget_defaults.rs  02_gallery.rs  showcase.rs
crates/presets/src/: lib.rs
examples/: 00_hello_world.rs  01_values.rs  02_stylesheet.rs  03_cascade.rs  04_render.rs  05_dashboard.rs  06_tailwind.rs  07_scifi_hud.rs  08_live_demo.rs  09_runtime_override.rs  10_scss_embed.rs  11_themekit_bridge.rs  12_theme_switcher.rs  13_sizing.rs  14_data_driven.rs  15_strict.rs  16_media.rs  17_combinators.rs  18_structural.rs  19_supports.rs  20_cache.rs  21_box_var.rs  22_opacity.rs  cascade.rs  dashboard.rs  live_demo.rs  render.rs  scifi_hud.rs  scss_embed.scss  stylesheet.rs  tailwind.rs  theme.css  themekit_bridge.rs  values.rs
scripts/: capture_tui.py
src/: box_model.rs  cache.rs  cascade.rs  color.rs  css_macro.rs  error.rs  lib.rs  media.rs  node.rs  runtime.rs  scss_macro.rs  selector.rs  style.rs  stylesheet.rs  supports.rs  themekit.rs  token.rs
