[package]
name = "ratatui-style"
version = "0.1.1"
edition = "2024"
rust-version = "1.85"
authors = ["Liangdi <wu@liangdi.me>"]
description = "A CSS cascade engine for ratatui — selectors, specificity, inheritance, pseudo-states, and data-driven styling."
license = "MIT"
repository = "https://github.com/Liangdi/ratatui-style"
documentation = "https://docs.rs/ratatui-style"
keywords = ["ratatui", "css", "style", "theme", "tui"]
categories = ["command-line-interface", "gui"]
readme = "README.md"
exclude = ["/design.md", "/justfile", "/cliff.toml", "/release.toml"]

[dependencies]
ratatui = "0.30"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
ratatui-themekit = { version = "0.6", optional = true }
# Pure-Rust Sass/SCSS compiler for the `scss!` macro. Only pulled in by the
# `scss` feature; never part of a default build.
grass = { version = "0.13", optional = true }

[features]
# Data-driven styling (JSON / TOML / YAML via serde + a JSON value reader).
# On by default; disable for a pure, zero-dep style engine.
default = ["serde"]
serde = ["dep:serde", "dep:serde_json"]
# Bridge semantic color slots from `ratatui-themekit` into CSS custom properties.
themekit = ["dep:ratatui-themekit"]
# Compile-time embedding of `.scss` via the `scss!` macro. The SCSS source is
# `include_str!`-ed at build time; `grass` compiles it to CSS on first access
# (lazily, cached in a `LazyLock`). Adds `grass` as a dependency.
scss = ["dep:grass"]

[dev-dependencies]
crossterm = "0.29"

[[example]]
name = "11_themekit_bridge"
required-features = ["themekit"]

[[example]]
name = "10_scss_embed"
required-features = ["scss"]

# --- workspace -------------------------------------------------------------
# The presets crate ships ready-to-use CSS themes/utilities built on this
# engine. It is a separate package so the engine stays dependency- and
# content-free; themes version independently and consumers opt in per-feature.
[workspace]
members = ["crates/presets"]
